document the permgen size setting